增加校验和token
